2008-02-17  Jaap Haitsma  <jaap@haitsma.org>

	* src/backend.c:
	* src/netspeed.c:
	Minor coding style fixes

2008-02-16  Jaap Haitsma  <jaap@haitsma.org>

	* src/netspeed.c: (change_icons), (display_help):
	* src/netspeed.h:
	Move all definitions from netspeed.h to netspeed.c

2008-02-16  Jaap Haitsma  <jaap@haitsma.org>

	Remove .cvsignore files

2008-02-16  Jaap Haitsma  <jaap@haitsma.org>

	Move docs directory to help. Fixes bug #516875

2008-02-16  Jaap Haitsma  <jaap@haitsma.org>

	* MAINTAINERS: Add myself and Joergen

2008-02-16  Jaap Haitsma  <jaap@haitsma.org>

	* configure.in:
	* po/LINGUAS:
	Use po/LINGUAS for translation. Fixes bug #516864

2008-02-16  Jaap Haitsma  <jaap@haitsma.org>

	* src/netspeed.c: (bytes_to_string), (redraw_graph),
	(update_applet), (about_cb), (netspeed_applet_factory):
	Some indentation fixes and cleanups
	Use g_set_application_name to make sure that about dialog shows the
	program name

2008-02-16  Jaap Haitsma  <jaap@haitsma.org>

	* src/netspeed.c:
	* src/netspeed.h:
	Don't use deprecated icon names. Fixes bug #516871

2008-02-16  Benoît Dejean  <benoit@placenet.org>

	* configure.in: Bumped version number to 0.15.
	* MAINTAINERS: Added file so translators can commit their work.

2006-11-26  Pedro Villavicencio Garrido  <pvillavi@gnome.org>

	* src/netspeed.c (settings_cb): remove the font size and
	timeout options from the settings window, now we use desktop fonts and
	the update interval is set to 1000 (ms).

	Fixes bug #373890.

	* ChangeLog: Correct joergen email.

2006-10-15  Jörgen Scheibengruber <mfcn@gmx.de>

	* configure.in:
	* pixmaps/Makefile.am:
	* pixmaps/netspeed-wireless-100.png:
	* pixmaps/netspeed-wireless-25.png:
	* pixmaps/netspeed-wireless-50.png:
	* pixmaps/netspeed-wireless-75.png:
	* src/Makefile.am:
	* src/backend.c: (free_device_info), (get_device_info),
	(compare_device_info), (get_wireless_info):
	* src/backend.h:
	* src/netspeed.c: (applet_change_size_or_orient),