@@ -1,5 +1,11 @@
 2008-02-17  Jaap Haitsma  <jaap@haitsma.org>
 
+	* configure.in:
+	* src/netspeed.c: (open_uri), (display_help), (handle_links):
+	Remove dependency on libgnomeui
+
+2008-02-17  Jaap Haitsma  <jaap@haitsma.org>
+
 	* src/backend.c:
 	* src/netspeed.c:
 	Minor coding style fixes
